Update and rename olive.conf to zaytun.conf

--- a/conf/zaytun.conf
+++ b/conf/zaytun.conf
@@ -5,7 +5,7 @@
 # Note: Second titlebar colors optional. Only applies #
 # to metacity-1 and not XFWM4.                        #
 #######################################################
-Theme_name="Olive"
+Theme_name="Zaytun"
 
 #Window Text Color:
 fgcolor="#000"
