Update and rename zune.conf to alexandria.conf

--- a/conf/alexandria.conf
+++ b/conf/alexandria.conf
@@ -5,7 +5,7 @@
 # Note: Second titlebar colors optional. Only applies #
 # to metacity-1 and not XFWM4.                        #
 #######################################################
-Theme_name="Zune"
+Theme_name="Alexandria"
 
 #Window Text Color:
 fgcolor="#fff"
